fix: disable z-index: -1

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -120,6 +120,7 @@ a {
 
 .disabled {
   opacity: 40%;
+  z-index: -1;
 }
 
 .en {
